[package]
name = "torcher"
version = "0.1.0"
authors = ["Nattapong Sirilappanich <s.nattapong@gmail.com>"]
edition = "2018"
license = "BSD-4-Clause"
build = "build.rs"

[dependencies]
proc-macro-hack = "0.5"
shape_derive = { path = "shape_derive" }
storage = { path = "storage" }
tensor = { path = "tensor" }

[workspace]
members = [
    "common",
    "shape_derive",
    "storage",
    "tensor"
]