[package]
name = "torcher"
version = "0.1.0"
authors = ["Nattapong Sirilappanich <s.nattapong@gmail.com>"]
edition = "2018"
license = "BSD-4-Clause"
build = "build.rs"

[dependencies]
proc-macro-hack = "0.5"
shape_derive = { path = "shape_derive", version = "0.1"}
storage = { path = "storage", version = "0.1"}
tensor = { path = "tensor", version = "0.1"}

[workspace]
members = [
    "common",
    "shape_derive",
    "storage",
    "tensor"
]