[package]
name = "torcher"
version = "0.1.0"
authors = ["Nattapong Sirilappanich <s.nattapong@gmail.com>"]
edition = "2018"
description = "Fast PyTorch tensor creation"
keywords = ["PyTorch", "Torch", "Aten", "Caffe2"]
categories = ["External FFI bindings", "Science"]
license = "BSD-4-Clause"
readme = "README.md"
build = "build.rs"

[features]
default = ["unsafe"]
safe = ["tensor/safe"]
serde = ["storage/serde", "tensor/serde"]
threadsafe = ["tensor/threadsafe"]
unsafe = ["tensor/unsafe"]

[dependencies]
proc-macro-hack = "0.5"
shape_derive = { path = "shape_derive", version = "0.1"}
storage = { path = "storage", version = "0.1"}

[dependencies.tensor]
path = "tensor"
version = "0.1"
default-features = false

[workspace]
members = [
    "common",
    "shape_derive",
    "storage",
    "tensor"
]