[package]
name = "storage"
version = "0.1.0"
authors = ["Nattapong Sirilappanich <s.nattapong@gmail.com>"]
edition = "2018"
license = "BSD-4-Clause"
build = "build.rs"

[dependencies]
storage_derive = { path = "storage_derive", version = "0.1" }
serde = { version = "1.0", optional = true }

[dev-dependencies]
serde_yaml = "0.8"