[package]
name = "tensor"
version = "0.1.0"
authors = ["Nattapong Sirilappanich <s.nattapong@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
common = { path = "../common", version = "0.1.0" }
storage = { path = "../storage", version = "0.1.0" }
tensor_derive = { path = "tensor_derive", version = "0.1.0" }

[build-dependencies]